--- a/communitheme/gnome-shell-sass/_dock.scss
+++ b/communitheme/gnome-shell-sass/_dock.scss
@@ -2,39 +2,67 @@
 
 #dashtodockContainer {
   &.shrink #dash, &.dashtodock #dash {
-    border: none;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.75); // TODO: can you stack box-shadows in the shell?
+    box-shadow: inset 0 4px 8px rgba(0,0,0,0.75);
+    border: 1px;
     padding: 0px;
   }
   &.shrink.left #dash, &.dashtodock.left #dash {
-    // border-left: 0px;
-    box-shadow: inset -1px 0 $osd_borders_color;
+    border-left: 0px;
     border-radius: 0px 9px 9px 0px;
   }
   &.shrink.right #dash, &.dashtodock.right #dash {
-    // border-right: 0px;
-    box-shadow: inset 1px 0 $osd_borders_color;
+    border-right: 0px;
     border-radius: 9px 0px 0px 9px;
   }
   &.shrink.top #dash, &.dashtodock.top #dash {
-    // border-top: 0px;
-    box-shadow: inset 0 1px $osd_borders_color;
+    border-top: 0px;
     border-radius: 0px 0px 9px 9px;
   }
   &.shrink.bottom #dash, &.dashtodock.bottom #dash {
-    // border-bottom: 0px;
-    box-shadow: inset 0 -1px $osd_borders_color;
+    border-bottom: 0px;
     border-radius: 9px 9px 0px 0px;
   }
   &.straight-corner #dash, &.shrink.straight-corner #dash {
     border-radius: 0px;
   }
-}
 
-#dash .app-well-app {
-  & .overview-icon {
-  border-radius: 0px !important;
-  border: none !important;
+  .show-apps {
+    // Ubuntu Launcher
+    $_bg: #e95420;
+    & {
+      // reset
+      &:hover,
+      &:focus,
+      &:checked {
+        .overview-icon { background-color: transparent; box-shadow: none; }
+      }
+
+      & .show-apps-icon,
+      &:checked .show-apps-icon,
+      &:focus .show-apps-icon {
+        color: transparent;
+        background-color: transparent;
+        transition-duration: 100ms;
+      }
+    }
+
+    transition-duration: 200ms;
+    background-color: $_bg;
+    box-shadow: 1px 0 $_bg; // the box-shadow is there to overlap the dock's border
+
+    &:focus, &:hover { background-color: lighten($_bg, 2%); box-shadow: 1px 0 lighten($_bg, 2%); }
+    &:active, &:checked { background-color: darken($_bg, 5%); box-shadow: 1px 0 darken($_bg, 5%); }
+
+    &,
+    &:focus,
+    &:hover,
+    &:active,
+    &:checked {
+      .overview-icon {
+        background-image: url("ubuntu-logo-icon.svg");
+        background-size: contain;
+      }
+    }
   }
 }
 
@@ -84,12 +112,12 @@
     }
   }
   &.opaque {
-    background-color: rgba(0, 0, 0, 0.9);
+    background-color: transparentize($panel_bg_color, $panel-alpha-value);
     border-color: rgba(0, 0, 0, 0.4);
     transition-duration: 300ms;
   }
   &.transparent {
-    background-color: rgba(0, 0, 0, 0.9);
+    background-color: transparentize($panel_bg_color, $panel-alpha-value);
     border-color: rgba(0, 0, 0, 0.1);
     transition-duration: 500ms;
   }
@@ -108,6 +136,14 @@
     margin: 2px;
   }
 }
+
+/* Dash height extended to the whole available vertical space */
+
+/* Running and focused application style */
+
+/* Only alpha value is used */
+
+/* Only alpha value is used */
 
 #dashtodockPreviewSeparator.popup-separator-menu-item-horizontal {
   width: 1px;
